Début d'une nouvelle formule pour GOAD

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Threat_Inteligence/CVE_skills/cves/*
 Personnal_simulations/old
 BAG_Code_tw520/__pycache__/*
 
+Threat_Inteligence/.~lock.CVE_knowledge_tooling_skills.csv#
